# user-guides

./: .gitignore  .gitmodules  404.html  CODEOWNERS  Makefile  README.md  acronyms.html  index.html  mkdocs.yml  project-words.txt  pyproject.toml  requirements.txt  sitemap.xml  zensical.toml
.github/: CODEOWNERS  pull_request_template.md
_site/: requirements.txt
account-project-management/: MyALCF.html  index.html
acronyms/: index.html
ai-testbed/: index.html
aurora/: aurora-pe.html  bugs-table.html  getting-started-on-aurora.html  index.html  known-issues.html  running-jobs-aurora.html  system-updates.html
contacting-support/: index.html
crux/: getting-started.html  index.html
data-management/: index.html
docs/: CODEOWNERS  README.md  acronyms.md  index.md  issues.md  tags.md
includes/: abbreviations.md  validate-inbound-URLs.txt
issues/: index.html
machines/: index.html
overrides/: main.html  standalone.html
polaris/: getting-started.html  index.html  known-issues.html  system-updates.html
policies/: alcf-acknowledgement-policy.html  index.html
running-jobs/: example-job-scripts.html  index.html  machine-reservations.html  pbs-qsub-options-table.html
scripts/: TAGS-README.md  add_tags.py  aurora-bug-table-sync.sh  find_port.py  generate_inbound_links.py  proofread.py  summarize_commits.py  validate_inbound_links.py
search/: search_index.json
services/: continuous-integration.html  gitlab-ci.html  index.html  inference-endpoints.html  jupyter-hub.html
sophia/: getting-started.html  index.html
stylesheets/: alcf-extra.css
(+1916 files in other folders)
